# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api/v1
 definitions:
-  model.TGMessage:
+  entity.TGMessage:
     properties:
       answer:
         type: string
@@ -13,7 +13,7 @@ definitions:
       text:
         type: string
     type: object
-  model.TGUser:
+  entity.TGUser:
     properties:
       chat_id:
         type: string
@@ -66,7 +66,7 @@ paths:
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/model.TGMessage'
+                    $ref: '#/definitions/entity.TGMessage'
                   type: array
               type: object
         "500":
@@ -109,7 +109,7 @@ paths:
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/model.TGUser'
+                    $ref: '#/definitions/entity.TGUser'
                   type: array
               type: object
         "500":
